--- a/Chat App/public/index.html
+++ b/Chat App/public/index.html
@@ -11,13 +11,13 @@
     integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk="
     crossorigin="anonymous" />
   <link rel="stylesheet" href="css/style.css" />
-  <title>ChatCord App</title>
+  <title>WeTalk App</title>
 </head>
 
 <body>
   <div class="join-container">
     <header class="join-header">
-      <h1><i class="fas fa-smile"></i> ChatCord</h1>
+      <h1><i class="fas fa-smile"></i> WeTalk</h1>
     </header>
     <main class="join-main">
       <form action="chat.html">
